===================================
django-registration-redux changelog
===================================

Version 1.11, TBD
----------------

Version 1.10, 09 February, 2018
----------------
* Bugfix: Updates Russian translation messages. -
`#323 <https://github.com/macropin/django-registration/pull/323>_`

Version 1.9, 16 November, 2017
----------------
* Bugfix: Fix ``SupervisedRegistrationProfile`` so expiration depends on
profiles that have completed the entire process or have exceeded the
``ACCOUNT_ACTIVATION_DAYS``  -
`#310 <https://github.com/macropin/django-registration/pull/310>_`
* Bugfix: Prevent resending an activation email if multiple
``RegistrationProfile`` objects exist for the given email address. -
`#311 <https://github.com/macropin/django-registration/pull/311>_`
* Bugfix: Add logging to ``RegistrationProfile.delete_expired_users``, use
``profile.activated`` instead of ``user.is_active``. -
`#308 <https://github.com/macropin/django-registration/pull/308>_`
* BACKWARDS-INCOMPATIBLE CHANGE: Change of return signature of
``RegistrationProfileManager.activate_user``. A tuple containing the User
instance and a boolean of whether or not said user was activated is now
returned. -
`#309 <https://github.com/macropin/django-registration/pull/309>`_.
* Bugfix: Updates `pt_BR` translation messages. -
`#305 <https://github.com/macropin/django-registration/pull/305>_`
* Bugfix: Update all translation strings with `django-admin makemessages --all`. -
`#304 <https://github.com/macropin/django-registration/pull/304>_`
* Feature: Configure from email address from ``Site`` object. -
`#294 <https://github.com/macropin/django-registration/pull/294>_`

Version 1.8, 03 October, 2017
----------------
* Bugfix: Add `outlook.com` to the list of free email providers. -
`#287 <https://github.com/macropin/django-registration/pull/287>_`
* Documentation: Add possible settings for activation emails. -
`#283 <https://github.com/macropin/django-registration/pull/282>_`